--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-      "test": "mocha G8ANALISIS/Back-end/test/*.js --watch"
+      "test": "mocha "
   },
   "keywords": [],
   "author": "",
