--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "mocha": "^6.2.0",
