--- a/Front-end/react-app/package.json
+++ b/Front-end/react-app/package.json
@@ -7,6 +7,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "tablex": "^1.8.3",
     "yarn": "^1.19.0"
   },
   "scripts": {
