--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "ejs": "^2.7.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "mysql": "^2.16.0"
